manifests/10-ingress-class.yaml
# THIS FILE IS AUTOMATICALLY GENERATED BY KUBESHARK CLI. DO NOT EDIT!
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  creationTimestamp: null
  labels:
    kubeshark-cli-version: v1
    kubeshark-created-by: kubeshark
    kubeshark-managed-by: kubeshark
  name: kubeshark-ingress-class
  namespace: kubeshark
spec:
  controller: k8s.io/ingress-nginx
