manifests/04-hub-pod.yaml
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: kubeshark-hub
    kubeshark-created-by: kubeshark
    kubeshark-managed-by: kubeshark
  name: kubeshark-hub
  namespace: kubeshark
spec:
  containers:
    - command:
        - ./hub
      image: docker.io/kubeshark/hub:latest
      imagePullPolicy: Always
      name: kubeshark-hub
      ports:
        - containerPort: 80
          hostPort: 8898
      resources:
        limits:
          cpu: 750m
          memory: 1Gi
        requests:
          cpu: 50m
          memory: 50Mi
  dnsPolicy: ClusterFirstWithHostNet
  serviceAccountName: kubeshark-service-account
  terminationGracePeriodSeconds: 0
  tolerations:
    - effect: NoExecute
      operator: Exists
    - effect: NoSchedule
      operator: Exists
status: {}
