manifests/06-front-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    app: kubeshark-front
    kubeshark-created-by: kubeshark
    kubeshark-managed-by: kubeshark
  name: kubeshark-front
spec:
  containers:
    - env:
        - name: REACT_APP_DEFAULT_FILTER
          value: ' '
        - name: REACT_APP_HUB_HOST
          value: ' '
        - name: REACT_APP_HUB_PORT
          value: "8898"
      image: docker.io/kubeshark/front:latest
      imagePullPolicy: Always
      name: kubeshark-front
      readinessProbe:
        failureThreshold: 3
        periodSeconds: 1
        successThreshold: 1
        tcpSocket:
          port: 80
        timeoutSeconds: 1
      resources:
        limits:
          cpu: 750m
          memory: 1Gi
        requests:
          cpu: 50m
          memory: 50Mi
  dnsPolicy: ClusterFirstWithHostNet
  serviceAccountName: kubeshark-service-account
  terminationGracePeriodSeconds: 0
  tolerations:
    - effect: NoExecute
      operator: Exists
    - effect: NoSchedule
      operator: Exists
status: {}
