manifests/09-worker-daemon-set.yaml
# THIS FILE IS AUTOMATICALLY GENERATED BY KUBESHARK CLI. DO NOT EDIT!
---
apiVersion: apps/v1
kind: DaemonSet
metadata:
  creationTimestamp: null
  labels:
    app: kubeshark-worker-daemon-set
    kubeshark-created-by: kubeshark
    kubeshark-managed-by: kubeshark
  name: kubeshark-worker-daemon-set
  namespace: kubeshark
spec:
  selector:
    matchLabels:
      app: kubeshark-worker-daemon-set
      kubeshark-created-by: kubeshark
      kubeshark-managed-by: kubeshark
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: kubeshark-worker-daemon-set
        kubeshark-created-by: kubeshark
        kubeshark-managed-by: kubeshark
      name: kubeshark-worker-daemon-set
      namespace: kubeshark
    spec:
      containers:
        - command:
            - ./worker
            - -i
            - any
            - -port
            - "8897"
            - -packet-capture
            - libpcap
            - -servicemesh
            - -tls
            - -procfs
            - /hostproc
          image: docker.io/kubeshark/worker:latest
          imagePullPolicy: Always
          name: kubeshark-worker-daemon-set
          ports:
            - containerPort: 8897
              hostPort: 8897
          resources:
            limits:
              cpu: 750m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 50Mi
          securityContext:
            capabilities:
              add:
                - NET_RAW
                - NET_ADMIN
                - SYS_ADMIN
                - SYS_PTRACE
                - DAC_OVERRIDE
                - SYS_RESOURCE
              drop:
                - ALL
          volumeMounts:
            - mountPath: /hostproc
              name: proc
              readOnly: true
            - mountPath: /sys
              name: sys
              readOnly: true
            - mountPath: /app/data
              name: kubeshark-persistent-volume
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      serviceAccountName: kubeshark-service-account
      terminationGracePeriodSeconds: 0
      tolerations:
        - effect: NoExecute
          operator: Exists
        - effect: NoSchedule
          operator: Exists
      volumes:
        - hostPath:
            path: /proc
          name: proc
        - hostPath:
            path: /sys
          name: sys
        - name: kubeshark-persistent-volume
          persistentVolumeClaim:
            claimName: kubeshark-persistent-volume-claim
