manifests/05-hub-service.yaml
# THIS FILE IS AUTOMATICALLY GENERATED BY KUBESHARK CLI. DO NOT EDIT!
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    kubeshark-created-by: kubeshark
    kubeshark-managed-by: kubeshark
  name: kubeshark-hub
  namespace: kubeshark
spec:
  ports:
    - name: kubeshark-hub
      port: 80
      targetPort: 80
  selector:
    app: kubeshark-hub
  type: ClusterIP
status:
  loadBalancer: {}
