manifests/11-ingress.yaml
# THIS FILE IS AUTOMATICALLY GENERATED BY KUBESHARK CLI. DO NOT EDIT!
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    kubeshark-cli-version: v1
    kubeshark-created-by: kubeshark
    kubeshark-managed-by: kubeshark
  name: kubeshark-ingress
  namespace: kubeshark
spec:
  ingressClassName: kubeshark-ingress-class
  rules:
    - host: ks.svc.cluster.local
      http:
        paths:
          - backend:
              service:
                name: kubeshark-hub
                port:
                  number: 80
            path: /api
            pathType: Prefix
          - backend:
              service:
                name: kubeshark-front
                port:
                  number: 80
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
