manifests/complete.yaml
---
# Source: kubeshark/templates/17-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  name: kubeshark-hub-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubeshark.com/app: hub
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
    - ports:
        - protocol: TCP
          port: 9100
  egress:
    - {}

---
# Source: kubeshark/templates/17-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
  name: kubeshark-front-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubeshark.com/app: front
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 8080
  egress:
    - {}

---
# Source: kubeshark/templates/17-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
  name: kubeshark-dex-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubeshark.com/app: dex
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 5556
  egress:
    - {}

---
# Source: kubeshark/templates/17-network-policies.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
  name: kubeshark-worker-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      app.kubeshark.com/app: worker
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - ports:
        - protocol: TCP
          port: 48999
        - protocol: TCP
          port: 49100
  egress:
    - {}

---
# Source: kubeshark/templates/05-hub-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubeshark.com/app: hub
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  name: kubeshark-hub
  namespace: default
spec:
  ports:
    - name: kubeshark-hub
      port: 80
      targetPort: 8080
  selector:
    app.kubeshark.com/app: hub
  type: ClusterIP

---
# Source: kubeshark/templates/07-front-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  name: kubeshark-front
  namespace: default
spec:
  ports:
    - name: kubeshark-front
      port: 80
      targetPort: 8080
  selector:
    app.kubeshark.com/app: front
  type: ClusterIP

---
# Source: kubeshark/templates/15-worker-service-metrics.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app.kubeshark.com/metrics: "true"
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '49100'
  name: kubeshark-worker-metrics
  namespace: default
spec:
  selector:
    app.kubeshark.com/app: worker
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  ports:
  - name: metrics
    protocol: TCP
    port: 49100
    targetPort: 49100

---
# Source: kubeshark/templates/16-hub-service-metrics.yaml
kind: Service
apiVersion: v1
metadata:
  labels:
    app.kubeshark.com/metrics: "true"
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port: '9100'
  name: kubeshark-hub-metrics
  namespace: default
spec:
  selector:
    app.kubeshark.com/app: hub
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  ports:
  - name: metrics
    protocol: TCP
    port: 9100
    targetPort: 9100

---
# Source: kubeshark/templates/09-worker-daemon-set.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  labels:
    app.kubeshark.com/app: worker
    sidecar.istio.io/inject: "false"
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  name: kubeshark-worker-daemon-set
  namespace: default
spec:
  selector:
    matchLabels:
      app.kubeshark.com/app: worker
      app.kubernetes.io/name: kubeshark
      app.kubernetes.io/instance: kubeshark
  template:
    metadata:
      labels:
        app.kubeshark.com/app: worker
        kubeshark.io/internal-auth: "true"
        helm.sh/chart: kubeshark-53.5.0
        app.kubernetes.io/name: kubeshark
        app.kubernetes.io/instance: kubeshark
        app.kubernetes.io/version: "53.5.0"
        app.kubernetes.io/managed-by: Helm
      name: kubeshark-worker-daemon-set
      namespace: kubeshark
    spec:
      containers:
        - command:
            - ./worker
            - -i
            - any
            - -port
            - '48999'
            - -metrics-port
            - '49100'
            - -packet-capture
            - 'best'
            - -loglevel
            - 'warning'
            - -servicemesh
            - -procfs
            - /hostproc
            - -resolution-strategy
            - 'auto'
            - -staletimeout
            - '30'
            - -tcp-flow-full-timeout
            - '1200'
            - -udp-flow-full-timeout
            - '1200'
            - -storage-size
            - '10Gi'
            - -capture-db-max-size
            - '500Mi'
            - -cloud-api-url
            - 'https://api.kubeshark.com'
          image: 'docker.io/kubeshark/worker:v53.5'
          imagePullPolicy: Always
          name: sniffer
          ports:
            - containerPort: 49100
              protocol: TCP
              name: metrics
          resources:
            limits:
              
              
              memory: 5Gi
              
            requests:
              
              cpu: 50m
              
              
              memory: 50Mi
              
          securityContext:
            privileged: true
          readinessProbe:
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 5
            tcpSocket:
              port: 48999
          livenessProbe:
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 5
            tcpSocket:
              port: 48999
          volumeMounts:
            - mountPath: /hostproc
              name: proc
              readOnly: true
            - mountPath: /sys
              name: sys
              readOnly: true
              mountPropagation: HostToContainer
            - mountPath: /app/data
              name: data
            - mountPath: /var/run/secrets/kubeshark/hub-token
              name: hub-internal-token
              readOnly: true
        - command:
            - ./tracer
            - -procfs
            - /hostproc
            - -disable-tls-log
            - -loglevel
            - 'warning'
          image: 'docker.io/kubeshark/worker:v53.5'
          imagePullPolicy: Always
          name: tracer
          resources:
            limits:
              
              
              memory: 5Gi
              
            requests:
              
              cpu: 50m
              
              
              memory: 50Mi
              
          securityContext:
            privileged: true
          volumeMounts:
            - mountPath: /hostproc
              name: proc
              readOnly: true
            - mountPath: /sys
              name: sys
              readOnly: true
              mountPropagation: HostToContainer
            - mountPath: /app/data
              name: data
            - mountPath: /etc/os-release
              name: os-release
              readOnly: true
            - mountPath: /hostroot
              mountPropagation: HostToContainer
              name: root
              readOnly: true
            - mountPath: /var/run/secrets/kubeshark/hub-token
              name: hub-internal-token
              readOnly: true
      dnsPolicy: ClusterFirstWithHostNet
      hostNetwork: true
      serviceAccountName: kubeshark-service-account
      tolerations:
        - key: 
          operator: "Exists"
          effect: "NoExecute"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
      volumes:
        - hostPath:
            path: /proc
          name: proc
        - hostPath:
            path: /sys
          name: sys
        - name: lib-modules
          hostPath:
            path: /lib/modules
        - hostPath:
            path: /etc/os-release
          name: os-release
        - hostPath:
            path: /
          name: root
        - name: data
          emptyDir:
            sizeLimit: 10Gi
        - name: hub-internal-token
          projected:
            sources:
              - serviceAccountToken:
                  path: token
                  audience: kubeshark-hub
                  expirationSeconds: 3600

---
# Source: kubeshark/templates/04-hub-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubeshark.com/app: hub
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  name: kubeshark-hub
  namespace: default
spec:
  replicas: 1  # Set the desired number of replicas
  selector:
    matchLabels:
      app.kubeshark.com/app: hub
      app.kubernetes.io/name: kubeshark
      app.kubernetes.io/instance: kubeshark
  template:
    metadata:
      labels:
        app.kubeshark.com/app: hub
        helm.sh/chart: kubeshark-53.5.0
        app.kubernetes.io/name: kubeshark
        app.kubernetes.io/instance: kubeshark
        app.kubernetes.io/version: "53.5.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: kubeshark-service-account
      containers:
        - name: hub
          command:
            - ./hub
            - -port
            - "8080"
            - -loglevel
            - 'warning'
            - -capture-stop-after
            - "5m"
            - -snapshot-size-limit
            - '20Gi'
            - -dissector-image
            - 'docker.io/kubeshark/worker:v53.5'
            - -dissector-cpu
            - '1'
            - -dissector-memory
            - '4Gi'
            - -dissector-storage-size
            - '20Gi'
            - -cloud-api-url
            - 'https://api.kubeshark.com'
          image: 'docker.io/kubeshark/hub:v53.5'
          imagePullPolicy: Always
          readinessProbe:
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 5
            tcpSocket:
              port: 8080
          livenessProbe:
            periodSeconds: 5
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 5
            tcpSocket:
              port: 8080
          resources:
            limits:
              
              
              memory: 5Gi
              
            requests:
              
              cpu: 50m
              
              
              memory: 50Mi
              
          volumeMounts:
          - name: saml-x509-volume
            mountPath: "/etc/saml/x509"
            readOnly: true
          - name: snapshots-volume
            mountPath: "/app/data/snapshots"
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
      volumes:
      - name: saml-x509-volume
        projected:
          sources:
          - secret:
              name: kubeshark-saml-x509-crt-secret
              items:
              - key: AUTH_SAML_X509_CRT
                path: kubeshark.crt
          - secret:
              name: kubeshark-saml-x509-key-secret
              items:
              - key: AUTH_SAML_X509_KEY
                path: kubeshark.key
      - name: snapshots-volume
        emptyDir:
          sizeLimit: 20Gi

---
# Source: kubeshark/templates/06-front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubeshark.com/app: front
    helm.sh/chart: kubeshark-53.5.0
    app.kubernetes.io/name: kubeshark
    app.kubernetes.io/instance: kubeshark
    app.kubernetes.io/version: "53.5.0"
    app.kubernetes.io/managed-by: Helm
  name: kubeshark-front
  namespace: default
spec:
  replicas: 1  # Set the desired number of replicas
  selector:
    matchLabels:
      app.kubeshark.com/app: front
      app.kubernetes.io/name: kubeshark
      app.kubernetes.io/instance: kubeshark
  template:
    metadata:
      labels:
        app.kubeshark.com/app: front
        helm.sh/chart: kubeshark-53.5.0
        app.kubernetes.io/name: kubeshark
        app.kubernetes.io/instance: kubeshark
        app.kubernetes.io/version: "53.5.0"
        app.kubernetes.io/managed-by: Helm
    spec:
      containers:
        - env:
            - name: REACT_APP_AUTH_ENABLED
              value: 'false'
            - name: REACT_APP_AUTH_TYPE
              value: 'saml'
            - name: REACT_APP_COMPLETE_STREAMING_ENABLED
              value: 'true'
            - name: REACT_APP_STREAMING_TYPE
              value: 'connect-rpc'
            - name: REACT_APP_AUTH_SAML_IDP_METADATA_URL
              value: ' '
            - name: REACT_APP_TIMEZONE
              value: ' '
            - name: REACT_APP_SCRIPTING_HIDDEN
              value: 'true'
            - name: REACT_APP_SCRIPTING_DISABLED
              value: 'true'
            - name: REACT_APP_BPF_OVERRIDE_DISABLED
              value: 'true'
            - name: REACT_APP_DISSECTION_ENABLED
              value: 'true'
            - name: 'REACT_APP_CLOUD_LICENSE_ENABLED'
              value: 'true'
            - name: REACT_APP_SUPPORT_CHAT_ENABLED
              value: 'false'
            - name: REACT_APP_BETA_ENABLED
              value: 'false'
            - name: REACT_APP_CLUSTER_WIDE_MAP_ENABLED
              value: 'false'
            - name: REACT_APP_RAW_CAPTURE_ENABLED
              value: 'true'
            - name: REACT_APP_ENTRIES_LIMIT
              value: '300000'
            - name: REACT_APP_SENTRY_ENABLED
              value: 'false'
            - name: REACT_APP_SENTRY_ENVIRONMENT
              value: 'production'
          image: 'docker.io/kubeshark/front:v53.5'
          imagePullPolicy: Always
          name: kubeshark-front
          livenessProbe:
            periodSeconds: 1
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 3
            tcpSocket:
              port: 8080
          readinessProbe:
            periodSeconds: 1
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 3
            tcpSocket:
              port: 8080
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 750m
              memory: 1Gi
            requests:
              cpu: 50m
              memory: 50Mi
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
              readOnly: true
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/os
                operator: In
                values:
                - linux
      volumes:
        - name: nginx-config
          configMap:
            name: kubeshark-nginx-config-map
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: kubeshark-service-account
